--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "playwright": "^1.50.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
