--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,12 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
   "printWidth": 80,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
