--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,9 +14,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./src/*"]
     },
 
     /* Linting */
