--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
@@ -41,6 +40,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
     "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.7",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
